<resources>
    <string name="app_name">حرية</string>
    <string name="about_app">About App</string>
    <string name="prisoner_books">Prisoner Books</string>
    <string name="prisoner_cards">Prisoner Cards</string>
    <string name="prisoner_details">Prisoner Details</string>
    <string name="prisoner_posters">Prisoner Posters</string>
    <string name="details">Details</string>
    <string name="prisoner_statistics">Prisoner Statistics</string>
    <string name="martyrs_of_the_captive_movement">Martyrs of the captive movement</string>
    <string name="child_captive">Child captive</string>
    <string name="girl_prisoner_inside_prisons">Girl Prisoner inside prisons</string>
    <string name="sick_prisoner">Sick prisoner</string>
    <string name="prisoner_he_spent_more_than_30_scholars">Prisoner, he spent moreFragment than 30 scholarsً</string>
    <string name="prisoner_sentenced_to_life">Prisoner sentenced to life</string>
    <string name="prisoner_inside_prisons">Prisoners inside prisons</string>
    <string name="administrative_detention">Administrative detention</string>
    <string name="technical_support">Technical Support</string>
    <string name="tell_us_your_problem">Tell us your problem</string>
    <string name="what_problem_are_you_facing">What problem are you facing?</string>
    <string name="send">Send</string>
    <string name="about_us">A civil association established in 2006 to defend the issues of prisoners and their families.</string>
    <string name="urgent_now">Urgent now</string>
    <string name="today_s_news">Today\'s news</string>
    <string name="notifications">Notifications</string>
    <string name="homeFragment">Home</string>
    <string name="searchFragment">Search</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="moreFragment">More</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="notifications_are_enabled">Notifications are enabled</string>
    <string name="notifications_are_disabled">Notifications are disabled</string>
    <string name="name">Name :</string>
    <string name="date_of_arrest">Date of arrest : </string>
    <string name="judgment">Judgment :</string>
    <string name="living">Living : </string>
    <string name="home_page">Home</string>
    <string name="search_page">Search</string>
    <string name="contact_us_page">Contact us</string>
    <string name="more_page">More</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="aboutAppText">Work to support the issue of male and female prisoners in the prisons of the Israeli occupation in all fields and at all local, Arab and international levels by working hard and distinguished in order to highlight the issue of the male and female prisoners and their suffering caused by the darkness of the cells in a framework of transparency</string>
    <string name="prisoners">Prisoners</string>
    <string name="books">Books</string>
    <string name="fake_recycler_job" translatable="false">FakeRecyclerJob</string>
</resources>